--- a/server/details/dbtables.html
+++ b/server/details/dbtables.html
@@ -304,6 +304,16 @@
 <li>submit_dir : Text</li>
 <li>tasks : Text  <span class="gray"># csv list of processing task_ids</span></li>
 <li>requirements : Text  <span class="gray"># json of {name:value}</span></li>
+<li>avail_cpu : int</li>
+<li>avail_gpu : int</li>
+<li>avail_memory : float</li>
+<li>avail_disk : float</li>
+<li>avail_time : float</li>
+<li>claim_cpu : int</li>
+<li>claim_gpu : int</li>
+<li>claim_memory : float</li>
+<li>claim_disk : float</li>
+<li>claim_time : float</li>
 </ul>
 <p><strong>user</strong></p>
 <ul class="simple">
