--- a/_modules/index.html
+++ b/_modules/index.html
@@ -124,6 +124,7 @@
 <li><a href="iceprod/core/exe_json.html">iceprod.core.exe_json</a></li>
 <li><a href="iceprod/core/functions.html">iceprod.core.functions</a></li>
 <li><a href="iceprod/core/gridftp.html">iceprod.core.gridftp</a></li>
+<li><a href="iceprod/core/i3exec.html">iceprod.core.i3exec</a></li>
 <li><a href="iceprod/core/jsonRPCclient.html">iceprod.core.jsonRPCclient</a></li>
 <li><a href="iceprod/core/jsonUtil.html">iceprod.core.jsonUtil</a></li>
 <li><a href="iceprod/core/parser.html">iceprod.core.parser</a></li>
