--- a/genindex.html
+++ b/genindex.html
@@ -2557,6 +2557,10 @@
   </dt>
 
       
+  <dt><a href="server/dbmethods.html#iceprod.server.dbmethods.web.web.web_get_job_counts_by_status">web_get_job_counts_by_status() (iceprod.server.dbmethods.web.web method)</a>
+  </dt>
+
+      
   <dt><a href="server/dbmethods.html#iceprod.server.dbmethods.web.web.web_get_jobs_by_status">web_get_jobs_by_status() (iceprod.server.dbmethods.web.web method)</a>
   </dt>
 
