--- a/_modules/iceprod/server/dbmethods/web.html
+++ b/_modules/iceprod/server/dbmethods/web.html
@@ -173,9 +173,7 @@
             <span class="n">bindings</span> <span class="o">+=</span> <span class="p">(</span><span class="s">&#39;%&#39;</span><span class="o">+</span><span class="n">gridspec</span><span class="o">+</span><span class="s">&#39;%&#39;</span><span class="p">,)</span>
         <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; group by search.task_status &#39;</span>
         <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
-        <span class="n">task_groups</span> <span class="o">=</span> <span class="p">{}</span>
-        <span class="k">for</span> <span class="n">status</span><span class="p">,</span><span class="n">num</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
-            <span class="n">task_groups</span><span class="p">[</span><span class="n">status</span><span class="p">]</span> <span class="o">=</span> <span class="n">num</span>
+        <span class="n">task_groups</span> <span class="o">=</span> <span class="p">{</span><span class="n">status</span><span class="p">:</span><span class="n">num</span> <span class="k">for</span> <span class="n">status</span><span class="p">,</span><span class="n">num</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">}</span>
         <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">task_groups</span><span class="p">)</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
