--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -629,7 +629,8 @@
 <span class="sd">            resources_available (dict): {resource:value}</span>
 <span class="sd">            resources_claimed (dict): {resource:value}</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;update pilot: %s&#39;</span><span class="p">,</span><span class="nb">str</span><span class="p">(</span><span class="n">tasks</span><span class="p">))</span>
+        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;update pilot: %s %r %r&#39;</span><span class="p">,</span> <span class="n">tasks</span><span class="p">,</span> <span class="n">resources_available</span><span class="p">,</span>
+                    <span class="n">resources_claimed</span><span class="p">)</span>
 
         <span class="n">avail</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;cpu&#39;</span><span class="p">:</span><span class="mi">0</span><span class="p">,</span><span class="s">&#39;gpu&#39;</span><span class="p">:</span><span class="mi">0</span><span class="p">,</span><span class="s">&#39;memory&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">,</span><span class="s">&#39;disk&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">,</span><span class="s">&#39;time&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">}</span>
         <span class="k">if</span> <span class="n">resources_available</span><span class="p">:</span>
