--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -638,7 +638,7 @@
 
         <span class="n">claim</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;cpu&#39;</span><span class="p">:</span><span class="mi">0</span><span class="p">,</span><span class="s">&#39;gpu&#39;</span><span class="p">:</span><span class="mi">0</span><span class="p">,</span><span class="s">&#39;memory&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">,</span><span class="s">&#39;disk&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">,</span><span class="s">&#39;time&#39;</span><span class="p">:</span><span class="mf">0.</span><span class="p">}</span>
         <span class="k">if</span> <span class="n">resources_claimed</span><span class="p">:</span>
-            <span class="n">avail</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">resources_claimed</span><span class="p">)</span>
+            <span class="n">claim</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">resources_claimed</span><span class="p">)</span>
 
         <span class="c"># handle table updates</span>
         <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update pilot set tasks=?, avail_cpu=?, avail_gpu=?, &#39;</span>
