--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -125,7 +125,7 @@
 <span class="kn">import</span> <span class="nn">logging</span>
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="k">import</span> <span class="n">datetime</span><span class="p">,</span> <span class="n">timedelta</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="k">import</span> <span class="n">partial</span>
-<span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">OrderedDict</span>
+<span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">OrderedDict</span><span class="p">,</span> <span class="n">defaultdict</span>
 <span class="kn">import</span> <span class="nn">math</span>
 <span class="kn">from</span> <span class="nn">copy</span> <span class="k">import</span> <span class="n">deepcopy</span>
 
@@ -263,12 +263,14 @@
                 <span class="n">new_tasks</span><span class="p">[</span><span class="n">job_ids</span><span class="p">[</span><span class="n">job_id</span><span class="p">]][</span><span class="s">&#39;job&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">job_index</span>
         <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select dataset_id, jobs_submitted, debug &#39;</span>
         <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;from dataset where dataset_id in (%s)&#39;</span>
-        <span class="n">dataset_ids</span> <span class="o">=</span> <span class="p">{</span><span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;dataset_id&#39;</span><span class="p">]:</span><span class="n">t</span> <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">new_tasks</span><span class="p">}</span>
+        <span class="n">dataset_ids</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">list</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">new_tasks</span><span class="p">:</span>
+            <span class="n">dataset_ids</span><span class="p">[</span><span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;dataset_id&#39;</span><span class="p">]]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">t</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bulk_select</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">dataset_ids</span><span class="p">):</span>
             <span class="k">for</span> <span class="n">dataset_id</span><span class="p">,</span><span class="n">jobs_submitted</span><span class="p">,</span><span class="n">debug</span> <span class="ow">in</span> <span class="p">(</span><span class="k">yield</span> <span class="n">f</span><span class="p">):</span>
-                <span class="n">t</span> <span class="o">=</span> <span class="n">dataset_ids</span><span class="p">[</span><span class="n">dataset_id</span><span class="p">]</span>
-                <span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;jobs_submitted&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">jobs_submitted</span>
-                <span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;debug&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">debug</span>
+                <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">dataset_ids</span><span class="p">[</span><span class="n">dataset_id</span><span class="p">]:</span>
+                    <span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;jobs_submitted&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">jobs_submitted</span>
+                    <span class="n">new_tasks</span><span class="p">[</span><span class="n">t</span><span class="p">][</span><span class="s">&#39;debug&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">debug</span>
 
         <span class="c"># get config files</span>
         <span class="n">configs</span> <span class="o">=</span> <span class="p">{}</span>
